Added readme; fixed some bug that crashed the gesture and MP labeling app

--- a/Context Labeling App/readme
+++ b/Context Labeling App/readme
@@ -1,1 +1,23 @@
+# Multi-Level Labeling App
+
+## Start here
+run the following commands with python 3.9 or above
+* `cd 'Context Labeling App'`
+* `python -m venv compass-env`
+* `.\compass-env\Scripts\activate`
+* `pip install -r requirements.txt`
+
+### Context labeling
+* `python .\context_labeling_app.py Peg_Transfer `
+* Context labels will be saved under `Datasets/dV/<TASK>/transcriptions_context`
+* Going forwards (D) automatically saves the labels for each frame
+
+### Motion Primitive labeling
+* `python .\mp_segmentation_labeling.py Peg_Transfer `
+Motion primitive labels will be saved under `Datasets/dV/<TASK>/transcriptions_mp`
+
+### Gesture labeling
+* `python .\gesture_segmentation_labeling.py <TASK> `
+Gesture labels will be saved under `Datasets/dV/<TASK>/transcriptions_gesture`
+
 
